--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.07.2024 08:35:14</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 05.07.2024 09:02:30</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -16,13 +16,7 @@ None
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
   position: relative;
   top: -100px; 
-  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
-Volba Sládků<br>
-Kozel tmavý<br>
-Cider Kingswood<br>
-<br>
-Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div></div>
+  visibility: hidden;"></a><br/><table class="dm"></table><br/></div></div>
 </td>
 </tr>
 </table>
@@ -72,74 +66,8 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_22714">Čtvrtek 04. 07.</a>
 </div>
-</div>
-<table class="list js-bookmark-block" id="day_22714">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Hovězí vývar </span>
-<span class="allergen">(A: 1, 3, 7, 9)</span>
-<p class="desc">s masem, nudlemi a zeleninou                               
-
-</p>
-</td>
-<td class="price cond">
-        55 Kč    </td>
-</tr>
-<tr>
-<td class="volume">400g</td>
-<td class="name">
-<span class="title cond">Kuřecí křídla </span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">s bylinkovou bagetou a sweet-chilli dipem, salát coleslaw </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Krůtí výpečky </span>
-<span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">se sladkokyselým zelím a bramborovými knedlíky </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">300g</td>
-<td class="name">
-<span class="title cond">Krémové hříbkové rizoto,</span>
-<span class="allergen">(A: 7)</span>
-<p class="desc">sypané parmazánem                    </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Telecí játra na grilu, </span>
-<span class="allergen">(A: 1, 3, 7, 10, 12)</span>
-<p class="desc">hranolky a tatarská omáčka </p>
-</td>
-<td class="price cond">
-        179 Kč    </td>
-</tr>
-<tr>
-<td class="volume">1ks</td>
-<td class="name">
-<span class="title cond">Pečené kolínko na černém pivu, </span>
-<span class="allergen">(A: 1, 3, 7, 10)</span>
-<p class="desc">podávané s křenem, hořčicí a rozpečeným chlebem </p>
-</td>
-<td class="price cond">
-        209 Kč    </td>
-</tr>
-</table>
+<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
 </div>
 </section>
 </td>
