--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,9 +1,26 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 07.07.2024 14:39:38</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 08.07.2024 07:03:16</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
-None
+<table class="table"><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><table class="table">
+<tbody>
+<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a játrovými knedlíčky</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s houbami a vařeným vajíčkem</td><td class="menuPrice">42,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, špekové knedlíky, brusinky, šlehačka</td><td class="menuPrice">165,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené hovězí kostky na česneku, bramborové knedlíky maštěné cibulkou, špenát</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zapečené šunkofleky s uzeným masem, kyselá okurka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Dorůžova pečená vepřová panenka, hráškové pyré, grilované rajče s parmazánem</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine "AGLIO OLIO" s plátkovanou vepřovou panenkou, strouhaný parmazán</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na kovbojských fazolkách, hranolky</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Medailonky z kuřecích prsou na jemné sýrové omáčce, gratinované brambory se smetanou</td><td class="menuPrice">184,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 137,- nebo 150g  Steak z vepřové pečeně za 137,-  (pro nesledující za 177,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažen sýr 45%, vařené brambory s máslem s šnitlíkem, tatarka</td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se žampiony a sýrem, smažené hranolky</td><td class="menuPrice">137,-/177,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5 L</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12°za 18,-Kč.  </td><td class="menuPrice">14,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Cool nealko grep alk. 0,5%</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"> Houba (0,2L červené víno s 0,3L colou a ledem)</td><td class="menuPrice">72,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -13,15 +30,16 @@ None
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
-<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
 Volba Sládků<br>
 Kozel tmavý<br>
 Cider Kingswood<br>
 <br>
 Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -31,9 +49,34 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Neděle 7.7.2024 </div>
+<div class="nadpis">Pondělí 8.7.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Zelná s paprikovou klobáskou 1</div>
+<div class="cena">40 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>200g Vepřové žebírko na srbský způsob, rýže 1</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>3 ks Bramborové knedlíky plněné uzeným masem, červené zelí, cibulka 1, 3, 7</div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>150g Smažená gouda, brambory, tatarka 1, 3, 7, 9</div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>350g Zeleninový salát s kuřecími kousky, bageta, dresing 1, 7</div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -44,9 +87,9 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 7.7.2024 </div>
+<div class="nadpis">Pondělí 8.7.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -67,8 +110,71 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
+<div class="item js-bookmark active">
+<a class="link js-bookmark-switcher" href="#day_22752">Pondělí 08. 07.</a>
 </div>
-<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
+</div>
+<table class="list js-bookmark-block" id="day_22752" style="display:table;">
+<tr>
+<td class="volume"></td>
+<td class="name">
+<span class="title cond">Gulášová polévka</span>
+<span class="allergen">(A: 1, 10, 12)</span>
+</td>
+<td class="price cond">
+        55 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Hovězí maso na pepři </span>
+<span class="allergen">(A: 1, 7)</span>
+<p class="desc">s dušenou rýží </p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">200g</td>
+<td class="name">
+<span class="title cond">Smažený květák </span>
+<span class="allergen">(A: 1, 3, 7, 10, 12)</span>
+<p class="desc">s vařeným bramborem, tatarská omáčka </p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Kuřecí prso Tandoori</span>
+<span class="allergen">(A: 1, 7)</span>
+<p class="desc">s dušenou rýží</p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">1ks</td>
+<td class="name">
+<span class="title cond">Quesadilla </span>
+<span class="allergen">(A: 1, 3, 7, 9, 12)</span>
+<p class="desc">s krůtím masem, zeleninou a bylinkovým dipem, hranolky </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">300g</td>
+<td class="name">
+<span class="title cond">Caesar salát </span>
+<span class="allergen">(A: 1, 3, 4, 7, 10)</span>
+<p class="desc">s kuřecím masem, opečenou slaninou, krutony a parmazánem </p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+</table>
 </div>
 </section>
 </td>
