--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.07.2024 07:32:39</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 11.07.2024 08:03:31</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -113,20 +113,30 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_22765">Středa 10. 07.</a>
-</div>
 <div class="item js-bookmark active">
 <a class="link js-bookmark-switcher" href="#day_22772">Čtvrtek 11. 07.</a>
 </div>
 </div>
-<table class="list js-bookmark-block" id="day_22765">
+<table class="list js-bookmark-block" id="day_22772" style="display:table;">
 <tr>
-<td class="volume">150g</td>
+<td class="volume"></td>
 <td class="name">
-<span class="title cond">Dalmatské čufty v rajčatové omáčce,</span>
-<span class="allergen">(A: 1, 3, 7)</span>
-<p class="desc">domácí houskové knedlíky
+<span class="title cond">Žampionový krém                              </span>
+<span class="allergen">(A: 1, 7)</span>
+</td>
+<td class="price cond">
+        55 Kč    </td>
+</tr>
+<tr>
+<td class="volume">1ks</td>
+<td class="name">
+<span class="title cond">Pečené kuřecí stehno na divoko </span>
+<span class="allergen">(A: 1, 7, 12)</span>
+<p class="desc">s bramborovou kaší 
+
+
+
+
 </p>
 </td>
 <td class="price cond">
@@ -135,34 +145,35 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <tr>
 <td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Kuřecí prso ve slaninovém kabátku</span>
-<span class="allergen">(A: 1, 7, 12)</span>
-<p class="desc">s mačkaným bramborem
+<span class="title cond">Štěpánská hovězí pečeně </span>
+<span class="allergen">(A: 1, 3, 7)</span>
+<p class="desc">a naše houskové knedlíky 
+
+</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Vepřový wok na asijský způsob, </span>
+<span class="allergen">(A: 1, 6, 11)</span>
+<p class="desc">rýžové nudle
 </p>
 </td>
 <td class="price cond">
         179 Kč    </td>
 </tr>
 <tr>
-<td class="volume">1ks</td>
-<td class="name">
-<span class="title cond">Rozpečený hermelín </span>
-<span class="allergen">(A: 7, 9)</span>
-<p class="desc">s grilovanou zeleninou a brusinkami 
-</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
 <td class="volume">150g</td>
 <td class="name">
-<span class="title cond">Pikantní kuřecí směs </span>
-<span class="allergen">(A: 1, 4, 6, 9, 11)</span>
-<p class="desc">s dušenou rýží                                              </p>
+<span class="title cond">Hovězí cheesburger </span>
+<span class="allergen">(A: 1, 3, 7, 11, 12)</span>
+<p class="desc">s křehkou zeleninou, cibulkou a hranolky </p>
 </td>
 <td class="price cond">
-        169 Kč    </td>
+        179 Kč    </td>
 </tr>
 <tr>
 <td class="volume">300g</td>
@@ -173,17 +184,6 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 <td class="price cond">
         179 Kč    </td>
-</tr>
-</table>
-<table class="list js-bookmark-block" id="day_22772" style="display:table;">
-<tr>
-<td class="volume"></td>
-<td class="name">
-<span class="title cond">Žampionový krém                              </span>
-<span class="allergen">(A: 1, 7)</span>
-</td>
-<td class="price cond">
-        55 Kč    </td>
 </tr>
 </table>
 </div>
